package com.example.SOEX_PROJECT_JRN.externalservices;

public class NavitiaAdapter {
}
